# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/rust/ohos_cargo_crate.gni")

ohos_cargo_crate("lib") {
    crate_name = "num_traits"
    crate_type = "rlib"
    crate_root = "src/lib.rs"

    sources = ["src/lib.rs"]
    edition = "2015"
    cargo_pkg_version = "0.2.15"
    cargo_pkg_authors = "The Rust Project Developers"
    cargo_pkg_name = "num-traits"
    cargo_pkg_description = "Numeric traits for generic mathematics"
    build_deps = ["//third_party/rust/crates/autocfg:lib"]
    features = [
        "default",
        "std",
    ]
    build_root = "build.rs"
    build_sources = ["build.rs"]
    build_script_outputs = [
        "probe0.ll",
        "probe1.ll",
        "probe2.ll",
        "probe3.ll",
        "probe4.ll",
        "probe5.ll",
        "probe6.ll",
        "probe7.ll",
    ]
}
